--- a/package.json
+++ b/package.json
@@ -11,16 +11,20 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.7.0",
+    "amqplib": "^0.10.7",
     "axios": "^1.7.7",
+    "chart.js": "^4.4.9",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
     "framer-motion": "^12.7.4",
     "gsap": "^3.12.7",
+    "html2pdf.js": "^0.10.3",
     "lucide-react": "^0.488.0",
     "merge": "^2.1.1",
     "notistack": "^3.0.2",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.55.0",
     "react-icons": "^5.5.0",
