--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "framer-motion": "^12.7.4",
     "gsap": "^3.12.7",
     "html2pdf.js": "^0.10.3",
+    "i18next": "^25.0.1",
+    "i18next-browser-languagedetector": "^8.0.5",
+    "i18next-http-backend": "^3.0.2",
     "lucide-react": "^0.488.0",
     "merge": "^2.1.1",
     "notistack": "^3.0.2",
@@ -27,6 +30,7 @@
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.55.0",
+    "react-i18next": "^15.4.1",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.26.2",
