--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.26.2",
     "react-toastify": "^10.0.5",
+    "recharts": "^2.15.3",
     "tailwind": "^4.0.0",
     "zod": "^3.24.3"
   },
