--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
     "framer-motion": "^12.7.4",
+    "google-auth-library": "^9.15.1",
     "gsap": "^3.12.7",
     "html2pdf.js": "^0.10.3",
     "i18next": "^25.0.1",
